# viper-boot

./: .gitattributes  .gitignore  .pre-commit-config.yaml  404.html  CONTRIBUTE.md  LICENSE.md  README.md  changelog.html  contribute.html  cov_to_lint.py  generate_docs.py  index.html  license.html  mkdocs.yml  noxfile.py  openapi.yml  openapi_spec.json  pyproject.toml  usage.html  xdoctest.html
docs/: usage.md  xdoctest.md
docs/static/stylesheets/: extra.css
reference/: SUMMARY.html
reference/viper_boot/: __init__.html
reference/viper_boot/config/: __init__.html  config.html
reference/viper_boot/controllers/: __init__.html  student_controller.html
reference/viper_boot/enums/: __init__.html  gender_enum.html
reference/viper_boot/examples/: __init__.html  object_oriented.html  python.html
reference/viper_boot/models/: __init__.html  student_model.html
reference/viper_boot/openapi_docs/: __init__.html  open_api.html  security_scheme.html  utils.html
reference/viper_boot/openapi_docs/decorators/: __init__.html  openapi.html  request.html  response.html
reference/viper_boot/schemas/: __init__.html  person_schema.html  student_id_schema.html  student_params_schema.html  student_schema.html
reference/viper_boot/services/: __init__.html  student_service.html
reference/viper_boot/utils/: __init__.html  banner.html
reference/viper_boot/utils/decorators/: __init__.html  singleton_decorator.html
search/: search_index.json
site/: 404.html  changelog.html  contribute.html  index.html  license.html  objects.inv  sitemap.xml  usage.html  xdoctest.html
site/assets/stylesheets/: palette.08040f6c.min.css  palette.08040f6c.min.css.map
site/reference/: SUMMARY.html
site/reference/viper_boot/: __init__.html
site/reference/viper_boot/config/: __init__.html  config.html
site/reference/viper_boot/controllers/: __init__.html  student_controller.html
site/reference/viper_boot/enums/: __init__.html  gender_enum.html
site/reference/viper_boot/examples/: __init__.html  object_oriented.html  python.html
site/reference/viper_boot/models/: __init__.html  student_model.html
site/reference/viper_boot/openapi_docs/: __init__.html  open_api.html  security_scheme.html  utils.html
site/reference/viper_boot/openapi_docs/decorators/: __init__.html  openapi.html  request.html  response.html
site/reference/viper_boot/schemas/: __init__.html  person_schema.html  student_id_schema.html  student_params_schema.html  student_schema.html
site/reference/viper_boot/services/: __init__.html  student_service.html
site/reference/viper_boot/utils/: __init__.html  banner.html
site/reference/viper_boot/utils/decorators/: __init__.html  singleton_decorator.html
site/search/: search_index.json
src/viper_boot/: __main__.py
src/viper_boot/config/: .env  __init__.py  config.py  settings.toml  settings_dev.toml  settings_prd.toml
src/viper_boot/controllers/: __init__.py  student_controller.py
src/viper_boot/enums/: __init__.py  gender_enum.py
src/viper_boot/examples/: __init__.py  object_oriented.py  python.py
src/viper_boot/models/: __init__.py  student_model.py
src/viper_boot/openapi_docs/: __init__.py  open_api.py  security_scheme.py  utils.py
src/viper_boot/openapi_docs/decorators/: __init__.py  openapi.py  request.py  response.py
src/viper_boot/openapi_docs/site/: index.html
src/viper_boot/schemas/: __init__.py  person_schema.py  student_id_schema.py  student_params_schema.py  student_schema.py
src/viper_boot/services/: __init__.py  student_service.py
src/viper_boot/utils/: __init__.py  banner.py
src/viper_boot/utils/decorators/: __init__.py  singleton_decorator.py
tests/: conftest.py
tests/integration/: student_controller_test.py  student_service_test.py
tests/unit/: banner_test.py  config_test.py  examples_test.py  gender_enum_test.py  person_schema_test.py  singleton_decorator_test.py  student_controller_test.py  student_id_schema_test.py  student_model_test.py  student_params_schema_test.py  student_schema_test.py  student_service_test.py
